Fixed menu and dark mode buttons location for less than 510 and 460 px devices

--- a/styles.css
+++ b/styles.css
@@ -593,9 +593,10 @@ footer>* {
         /* margin: 0; */
     }
 
-    /* .navbar-ul li {
-         margin-left: 0; 
+    /* .navbar-ul ul {
+        margin: 0;
     } */
+
     .navbar-sidebar {
         width: 30%;
     }
@@ -610,7 +611,7 @@ footer>* {
     }
 
     .navbar-container ul {
-        margin-right: 3rem;
+        /* margin-right: 3rem; */
     }
 
     .navbar-sidebar {
@@ -654,5 +655,11 @@ footer>* {
         /* Smooth transition */
         z-index: 1002;
         /* Ensure it's above other elements */
+    }
+}
+
+@media screen and (max-width:460px) {
+    .navbar-ul li {
+        margin-left: 1.5rem;
     }
 }
